--- a/HTMLprocess/HTMLprocess.csproj
+++ b/HTMLprocess/HTMLprocess.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NoWarn>SA1633;SA0001;SA1309;SA1101;SA1600;SA1200;SA1601;SA1124;SA1123</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
