--- a/HTMLprocess/packages.config
+++ b/HTMLprocess/packages.config
@@ -3,8 +3,13 @@
   <package id="HtmlAgilityPack.NetCore" version="1.5.0.1" targetFramework="net48" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.DirectoryServices" version="7.0.1" targetFramework="net48" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Permissions" version="7.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net48" />
 </packages>
