--- a/HTMLprocess/HTMLprocess.csproj
+++ b/HTMLprocess/HTMLprocess.csproj
@@ -84,10 +84,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AD\GroupProcessing.cs" />
+    <Compile Include="GroupMember.cs" />
     <Compile Include="HendlerHTML.cs" />
     <Compile Include="Interfaces\IGetGroupsByUser.cs" />
     <Compile Include="Interfaces\IHendlerHTML.cs" />
-    <Compile Include="LDAP.cs" />
+    <Compile Include="AD\LDAP.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Starter.cs" />
