--- a/HTMLprocess/packages.config
+++ b/HTMLprocess/packages.config
@@ -4,6 +4,7 @@
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.DirectoryServices" version="7.0.1" targetFramework="net48" />
+  <package id="System.DirectoryServices.AccountManagement" version="7.0.1" targetFramework="net48" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
